Fix long link word wrap in PDF. BZ #923481

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -131,6 +131,10 @@ a:link {
 	color:#3366cc;
 }
 
+body.pdf a:link {
+	word-wrap: break-word;
+}
+
 a:visited {
 	text-decoration:none;
 	border-bottom: 1px dotted ;
